force-app/main/default/objects/Proposal__c/fields/Admin_Fee_Annual__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee_Annual__c</fullName>
    <label>Admin Fee (Annual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>