force-app/main/default/objects/Proposal__c/fields/Admin_Fee_Gross_Wages__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee_Gross_Wages__c</fullName>
    <label>Admin Fee (Gross Wages)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>