force-app/main/default/objects/Proposal__c/fields/Admin_Fee_Per_Check__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee_Per_Check__c</fullName>
    <label>Admin Fee (Per Check)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>