force-app/main/default/objects/Proposal__c/fields/Administrative_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Fee_Type__c</fullName>
    <label>Administrative Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gross Wages</fullName>
                <default>true</default>
                <label>Gross Wages</label>
            </value>
            <value>
                <fullName>Per Check</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>