force-app/main/default/objects/Proposal__c/fields/Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Request</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Approval_Request__c.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Approval_Request__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>