force-app/main/default/objects/Proposal__c/fields/Average_Aged_Years__c.field-meta.xml
<CustomField>
    <fullName>Average_Aged_Years__c</fullName>
    <formula>Total_Aged_Months__c /12</formula>
    <inlineHelpText>Total Aged Months / 12</inlineHelpText>
    <label>Average Aged Years</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>