force-app/main/default/objects/Proposal__c/fields/Average_Developed_Losses_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Average_Developed_Losses_Per_Year__c</fullName>
    <formula>Total_Developed_Losses__c / Average_Aged_Years__c</formula>
    <inlineHelpText>Total Developed Losses/Average Aged Years</inlineHelpText>
    <label>Average Developed Losses Per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>