force-app/main/default/objects/Proposal__c/fields/Average_Losses_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Average_Losses_Per_Year__c</fullName>
    <formula>Total_Losses__c /   Average_Aged_Years__c</formula>
    <inlineHelpText>Total_Losses__c / Average_Aged_Years__c</inlineHelpText>
    <label>Average Losses Per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>