force-app/main/default/objects/Proposal__c/fields/Bill_Premium__c.field-meta.xml
<CustomField>
    <fullName>Bill_Premium__c</fullName>
    <inlineHelpText>Sales Premium + Assessment/Surcharge Fees</inlineHelpText>
    <label>Bill Premium</label>
    <summarizedField>WC_Rate__c.Bill_Premium__c</summarizedField>
    <summaryForeignKey>WC_Rate__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>