force-app/main/default/objects/Proposal__c/fields/Bill_Surcharge_Assessment_Fees__c.field-meta.xml
<CustomField>
    <fullName>Bill_Surcharge_Assessment_Fees__c</fullName>
    <inlineHelpText>Assessment Fees * Sales Premium</inlineHelpText>
    <label>Bill Surcharge/Assessment Fees</label>
    <summarizedField>WC_Rate__c.Bill_Assessment_Fees__c</summarizedField>
    <summaryForeignKey>WC_Rate__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>