force-app/main/default/objects/Proposal__c/fields/Carrier_Cost__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Cost__c</fullName>
    <formula>Manual_Premium__c * Policy_Submit_Rate__c</formula>
    <inlineHelpText>Manual Premium * Policy Submit Rate</inlineHelpText>
    <label>Carrier Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>