force-app/main/default/objects/Proposal__c/fields/Carrier_Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Submission_Status__c</fullName>
    <label>Carrier Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Carrier Approved</fullName>
            </value>
            <value>
                <fullName>Carried Denied</fullName>
            </value>
            <value>
                <fullName>Ready for Carrier Submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>