force-app/main/default/objects/Proposal__c/fields/Carrier_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Submitted_Date__c</fullName>
    <label>Carrier Submitted Date</label>
    <type>DateTime</type>
</CustomField>