force-app/main/default/objects/Proposal__c/fields/Cash_Flow__c.field-meta.xml
<CustomField>
    <fullName>Cash_Flow__c</fullName>
    <formula>Bill_Premium__c - Final_Recommended_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Final Recommended Premium - Bill Premium</inlineHelpText>
    <label>Cash Flow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>