force-app/main/default/objects/Proposal__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <label>Client</label>
    <type>Text</type>
</CustomField>