force-app/main/default/objects/Proposal__c/fields/Client_Address__c.field-meta.xml
<CustomField>
    <fullName>Client_Address__c</fullName>
    <formula>Opportunity__r.Account.BillingStreet</formula>
    <label>Client Address</label>
    <type>Text</type>
</CustomField>