force-app/main/default/objects/Proposal__c/fields/Client_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Client_Address_Line_2__c</fullName>
    <formula>Opportunity__r.Account.BillingCity &amp; &quot; &quot; &amp;  Opportunity__r.Account.BillingState &amp; &quot; &quot; &amp;  Opportunity__r.Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Address Line 2</label>
    <type>Text</type>
</CustomField>