force-app/main/default/objects/Proposal__c/fields/Client_Set_up_Fee__c.field-meta.xml
<CustomField>
    <fullName>Client_Set_up_Fee__c</fullName>
    <label>Client Set-up Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>