force-app/main/default/objects/Proposal__c/fields/Client_Set_up_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>Client_Set_up_Fee_Waived__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Client Set-up Fee Waived</label>
    <type>Checkbox</type>
</CustomField>