force-app/main/default/objects/Proposal__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>Opportunity__r.Opportunity_Total_Commission__c  *  Trion_Admin_Fee__c</formula>
    <inlineHelpText>Total Commission % * Estimated Admin Fee</inlineHelpText>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>