force-app/main/default/objects/Proposal__c/fields/Conga_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Conga_Admin_Fee__c</fullName>
    <formula>IF( ISPICKVAL(Administrative_Fee_Type__c , &quot;Gross Wages&quot;), text((Admin_Fee_Gross_Wages__c * 100)) &amp; &quot;%&quot;, 
IF( ISPICKVAL(Administrative_Fee_Type__c , &quot;Per Check&quot;), &quot;$&quot;&amp;text(  Admin_Fee_Per_Check__c  ) , 
IF(ISPICKVAL(Administrative_Fee_Type__c, &quot;Annual&quot;), &quot;$&quot;&amp;text( Admin_Fee_Annual__c ), null)))</formula>
    <label>Proposal Admin Fee</label>
    <type>Text</type>
</CustomField>