force-app/main/default/objects/Proposal__c/fields/Conga_Termination_Fee_Per_Employee__c.field-meta.xml
<CustomField>
    <fullName>Conga_Termination_Fee_Per_Employee__c</fullName>
    <description>Termination fee Per Employee</description>
    <formula>IF( Termination_Fee_Per_Employee_Waived__c = true, &quot;Waived&quot;, 
IF(NOT(ISBLANK(Termination_Fee_Per_Employee__c)), &quot;$&quot;&amp;text(Termination_Fee_Per_Employee__c),
IF(NOT(ISBLANK( Termination_Fee_Per_Employee_Percentage__c)), text((Termination_Fee_Per_Employee_Percentage__c*100))&amp;&quot;%&quot;, null
)))</formula>
    <label>Proposal Termination Fee Per Employee</label>
    <type>Text</type>
</CustomField>