force-app/main/default/objects/Proposal__c/fields/Contract_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Generated_Date__c</fullName>
    <label>Contract Generated Date</label>
    <type>DateTime</type>
</CustomField>