force-app/main/default/objects/Proposal__c/fields/Contract_Validation__c.field-meta.xml
<CustomField>
    <fullName>Contract_Validation__c</fullName>
    <formula>IF(
 Last_Comp_Added__c  &gt;  Contract_Generated_Date__c , &quot;INVALID&quot;, &quot;VALID&quot;)</formula>
    <label>Contract Validation</label>
    <type>Text</type>
</CustomField>