force-app/main/default/objects/Proposal__c/fields/CSA_Template__c.field-meta.xml
<CustomField>
    <fullName>CSA_Template__c</fullName>
    <formula>Pricing_Detail_Template__r.CSA__r.Id</formula>
    <label>CSA Template</label>
    <type>Text</type>
</CustomField>