force-app/main/default/objects/Proposal__c/fields/Current_Policy_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Policy_Expiration_Date__c</fullName>
    <label>Current Policy Expiration Date</label>
    <type>Date</type>
</CustomField>