force-app/main/default/objects/Proposal__c/fields/Days_to_Generate_Contract__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Generate_Contract__c</fullName>
    <formula>Contract_Generated_Date__c - Opportunity__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Generate Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>