force-app/main/default/objects/Proposal__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <formula>IF(
AND(of_PEO_States__c &gt; 0,
of_Client_Level_States__c &gt;0), &quot;PEO and Client Level&quot;,
IF(
AND(of_PEO_States__c = 0,
of_Client_Level_States__c &gt;0), &quot;Client Level&quot;,
IF(
AND(of_PEO_States__c &gt; 0,
of_Client_Level_States__c =0), &quot;PEO Level&quot;,
NULL)))</formula>
    <label>Deal Type</label>
    <type>Text</type>
</CustomField>