force-app/main/default/objects/Proposal__c/fields/Delivery_Fee_Per_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Fee_Per_Location__c</fullName>
    <label>Delivery Fee Per Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
                <default>true</default>
                <label>Cost</label>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>