force-app/main/default/objects/Proposal__c/fields/Developed_Loss_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Developed_Loss_Ratio__c</fullName>
    <formula>Average_Developed_Losses_Per_Year__c/Final_Recommended_Premium__c</formula>
    <inlineHelpText>Avg Developed Losses / Final Recommended Premium</inlineHelpText>
    <label>Developed Loss Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>