force-app/main/default/objects/Proposal__c/fields/Doc_Id__c.field-meta.xml
<CustomField>
    <fullName>Doc_Id__c</fullName>
    <label>Proposal Doc Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>