force-app/main/default/objects/Proposal__c/fields/Employee_New_Hire_Fee_Per_Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee_New_Hire_Fee_Per_Employee__c</fullName>
    <label>Employee New Hire Fee (Per Employee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>