force-app/main/default/objects/Proposal__c/fields/Employee_New_Hire_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>Employee_New_Hire_Fee_Waived__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Employee New Hire Fee Waived</label>
    <type>Checkbox</type>
</CustomField>