force-app/main/default/objects/Proposal__c/fields/Employment_Practice_Liability_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Employment_Practice_Liability_Insurance__c</fullName>
    <defaultValue>0.003</defaultValue>
    <label>Employment Practice Liability Insurance</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>