force-app/main/default/objects/Proposal__c/fields/EPLI_50_000_Deductible__c.field-meta.xml
<CustomField>
    <fullName>EPLI_50_000_Deductible__c</fullName>
    <label>EPLI $50,000 Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>