force-app/main/default/objects/Proposal__c/fields/EPLI_50_000_Deductible_Waived__c.field-meta.xml
<CustomField>
    <fullName>EPLI_50_000_Deductible_Waived__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EPLI $50,000 Deductible Waived</label>
    <type>Checkbox</type>
</CustomField>