force-app/main/default/objects/Proposal__c/fields/EPLI__c.field-meta.xml
<CustomField>
    <fullName>EPLI__c</fullName>
    <label>EPLI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>