force-app/main/default/objects/Proposal__c/fields/EPLI_Cost__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Cost__c</fullName>
    <formula>IF(
AND(
OR(
ISPICKVAL( Quote_Type__c, &quot;PEO&quot;),
ISPICKVAL(Quote_Type__c, &quot;PEO W/O COMP&quot;)),
EPLI_Waived__c = FALSE), Total_Gross_Wages__c * Employment_Practice_Liability_Insurance__c, 0)</formula>
    <label>EPLI Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>