force-app/main/default/objects/Proposal__c/fields/EPLI_Maximum_Coverage_Limit_Per_Claim__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Maximum_Coverage_Limit_Per_Claim__c</fullName>
    <defaultValue>2000000.00</defaultValue>
    <label>EPLI (Maximum Coverage Limit Per Claim)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>