force-app/main/default/objects/Proposal__c/fields/EPLI_Waived__c.field-meta.xml
<CustomField>
    <fullName>EPLI_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPLI Waived</label>
    <type>Checkbox</type>
</CustomField>