force-app/main/default/objects/Proposal__c/fields/Estimated_Annual_Client_Preimum__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Client_Preimum__c</fullName>
    <inlineHelpText>Enter zero for Quote Type of PEO w/o comp or ASO.</inlineHelpText>
    <label>Est. Annu. Client Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>