force-app/main/default/objects/Proposal__c/fields/Estimated_Annual_HR_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_HR_Cost__c</fullName>
    <label>Est. Annu. HR Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>