force-app/main/default/objects/Proposal__c/fields/Excluded_Losses__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Losses__c</fullName>
    <label>Excluded Losses</label>
    <summarizedField>Loss_Year__c.Excluded_Losses__c</summarizedField>
    <summaryForeignKey>Loss_Year__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>