force-app/main/default/objects/Proposal__c/fields/Exp_Mod__c.field-meta.xml
<CustomField>
    <fullName>Exp_Mod__c</fullName>
    <label>Exp Mod</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>