force-app/main/default/objects/Proposal__c/fields/FICA__c.field-meta.xml
<CustomField>
    <fullName>FICA__c</fullName>
    <formula>Year__r.FICA__c</formula>
    <label>FICA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>