force-app/main/default/objects/Proposal__c/fields/Final_Recommended_Premium__c.field-meta.xml
<CustomField>
    <fullName>Final_Recommended_Premium__c</fullName>
    <formula>IF(
Recommended_Premium__c  &lt; Manual_Premium__c, Manual_Premium__c,Recommended_Premium__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Recommended Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>