force-app/main/default/objects/Proposal__c/fields/FUTA__c.field-meta.xml
<CustomField>
    <fullName>FUTA__c</fullName>
    <formula>Year__r.FUTA__c</formula>
    <label>FUTA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>