force-app/main/default/objects/Proposal__c/fields/Gross_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Margin__c</fullName>
    <formula>Total_Profit__c / Total_Gross_Wages__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Profit / Gross Wages</inlineHelpText>
    <label>Gross Profit Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>