force-app/main/default/objects/Proposal__c/fields/Health_Quote__c.field-meta.xml
<CustomField>
    <fullName>Health_Quote__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Health Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>