force-app/main/default/objects/Proposal__c/fields/Incurred_Loss_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Incurred_Loss_Ratio__c</fullName>
    <formula>Average_Losses_Per_Year__c / Manual_Premium__c</formula>
    <inlineHelpText>Average Losses per year / Manual Premium</inlineHelpText>
    <label>Incurred Loss Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>