force-app/main/default/objects/Proposal__c/fields/Last_Comp_Added__c.field-meta.xml
<CustomField>
    <fullName>Last_Comp_Added__c</fullName>
    <label>Last Comp Added</label>
    <summarizedField>WC_Rate__c.CreatedDate</summarizedField>
    <summaryForeignKey>WC_Rate__c.Proposal__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>