force-app/main/default/objects/Proposal__c/fields/Manual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Manual_Premium__c</fullName>
    <inlineHelpText>Excluding State Assessment Fees</inlineHelpText>
    <label>Manual Premium</label>
    <summarizedField>WC_Rate__c.Premium__c</summarizedField>
    <summaryForeignKey>WC_Rate__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>