force-app/main/default/objects/Proposal__c/fields/New_Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Entity__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>New Business Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>