force-app/main/default/objects/Proposal__c/fields/Next_Version__c.field-meta.xml
<CustomField>
    <fullName>Next_Version__c</fullName>
    <formula>Version__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>