force-app/main/default/objects/Proposal__c/fields/No_Loss_Affidavit__c.field-meta.xml
<CustomField>
    <fullName>No_Loss_Affidavit__c</fullName>
    <formula>IF(
 ISPICKVAL(New_Business_Entity__c, &quot;No&quot;)  &amp;&amp; ISPICKVAL( Quote_Type__c, &quot;PEO&quot;) &amp;&amp;  Opportunity__r.No_Loss_Affidative__c = 0, &quot;No&quot;, &quot;Yes&quot;)</formula>
    <label>No Loss Affidavit</label>
    <type>Text</type>
</CustomField>