force-app/main/default/objects/Proposal__c/fields/NSF_Check_or_Reversed_ACH_Fee__c.field-meta.xml
<CustomField>
    <fullName>NSF_Check_or_Reversed_ACH_Fee__c</fullName>
    <defaultValue>250.00</defaultValue>
    <label>NSF Check or Reversed ACH Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>