force-app/main/default/objects/Proposal__c/fields/of_Client_Level_States__c.field-meta.xml
<CustomField>
    <fullName>of_Client_Level_States__c</fullName>
    <label># of Client Level States</label>
    <summaryFilterItems>
        <field>SUTA_Quote__c.Reporting_Level__c</field>
        <operation>equals</operation>
        <value>Client</value>
    </summaryFilterItems>
    <summaryForeignKey>SUTA_Quote__c.Proposal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>