force-app/main/default/objects/Proposal__c/fields/of_Employees_w_o_comp__c.field-meta.xml
<CustomField>
    <fullName>of_Employees_w_o_comp__c</fullName>
    <label>Total # of Employees w/o comp</label>
    <summarizedField>SUTA_Quote__c.of_Employees__c</summarizedField>
    <summaryForeignKey>SUTA_Quote__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>