force-app/main/default/objects/Proposal__c/fields/Override_Gross_Wages_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Override_Gross_Wages_Admin_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Gross Wages Admin Fee</label>
    <type>Checkbox</type>
</CustomField>