force-app/main/default/objects/Proposal__c/fields/Per_Check_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Per_Check_Admin_Fee__c</fullName>
    <formula>CASE(Per_Check_Frequency__c , 
&quot;Weekly&quot;,  (Admin_Fee_Per_Check__c *  Total_of_Employees__c  ) * 52,
&quot;Bi-weekly&quot;,(Admin_Fee_Per_Check__c *  Total_of_Employees__c  ) * 26,
&quot;Monthly&quot;,(Admin_Fee_Per_Check__c *  Total_of_Employees__c  ) * 12,
&quot;Semi Monthly&quot;,(Admin_Fee_Per_Check__c *  Total_of_Employees__c  ) * 24, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Check Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>