force-app/main/default/objects/Proposal__c/fields/Per_Check_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Per_Check_Frequency__c</fullName>
    <label>Per Check Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Administrative_Fee_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Semi Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>