force-app/main/default/objects/Proposal__c/fields/Policy_Year__c.field-meta.xml
<CustomField>
    <fullName>Policy_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Year</label>
    <referenceTo>Policy_Year__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>