force-app/main/default/objects/Proposal__c/fields/Price_Matrix_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Price_Matrix_Requirement__c</fullName>
    <formula>IF(
ISBLANK(Pricing_Matrix__c ), &quot;Pricing Not Started&quot;,
IF(
Profit_Per_EE__c &lt; Pricing_Matrix__r.Price_per_EE__c, &quot;Override Approval Required&quot;,
&quot;Approved&quot;
))</formula>
    <label>Trion Price Requirement</label>
    <type>Text</type>
</CustomField>