force-app/main/default/objects/Proposal__c/fields/Price_Override_by__c.field-meta.xml
<CustomField>
    <fullName>Price_Override_by__c</fullName>
    <label>Price Override by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>