force-app/main/default/objects/Proposal__c/fields/Price_Override_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Price_Override_Decision_Date__c</fullName>
    <label>Price Override Decision Date</label>
    <type>DateTime</type>
</CustomField>