force-app/main/default/objects/Proposal__c/fields/Price_Override_Decision_Notes__c.field-meta.xml
<CustomField>
    <fullName>Price_Override_Decision_Notes__c</fullName>
    <label>Price Override Decision Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>