force-app/main/default/objects/Proposal__c/fields/Price_Override_Status__c.field-meta.xml
<CustomField>
    <fullName>Price_Override_Status__c</fullName>
    <label>Price Override Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>