force-app/main/default/objects/Proposal__c/fields/Pricing_Detail_Doc__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Detail_Doc__c</fullName>
    <formula>Client__c &amp; &quot; - Proposal&quot; &amp; &quot; &quot; &amp;  text(Version__c)&amp;&quot;.docx&quot;</formula>
    <label>Pricing Detail Doc</label>
    <type>Text</type>
</CustomField>