force-app/main/default/objects/Proposal__c/fields/Pricing_Detail_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Detail_Generated_Date__c</fullName>
    <label>Pricing Detail Generated Date</label>
    <type>DateTime</type>
</CustomField>