force-app/main/default/objects/Proposal__c/fields/Pricing_Detail_Template__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Detail_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Detail Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>