force-app/main/default/objects/Proposal__c/fields/Pricing_Detail_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Detail_Type__c</fullName>
    <formula>Pricing_Detail_Template__r.APXTConga4__Name__c</formula>
    <label>Pricing Detail Template</label>
    <type>Text</type>
</CustomField>