force-app/main/default/objects/Proposal__c/fields/Pricing_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Matrix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Matrix</label>
    <referenceTo>Pricing_Matrix__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>