force-app/main/default/objects/Proposal__c/fields/Pricing_Matrix_Price_Per_EE__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Matrix_Price_Per_EE__c</fullName>
    <formula>Pricing_Matrix__r.Price_per_EE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Matrix Price Per EE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>