force-app/main/default/objects/Proposal__c/fields/Pricing_Status__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Status__c</fullName>
    <formula>IF(
ISBLANK(Pricing_Matrix__c ), &quot;Pricing Not Started&quot;,
IF(
 Profit_Per_EE__c    &lt;  Pricing_Matrix__r.Price_per_EE__c, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;),
IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;green&quot;)
))</formula>
    <label>Pricing Status</label>
    <type>Text</type>
</CustomField>