force-app/main/default/objects/Proposal__c/fields/Profit_Per_EE__c.field-meta.xml
<CustomField>
    <fullName>Profit_Per_EE__c</fullName>
    <formula>Trion_Bill_Per_EE__c - Trion_Cost_Per_Employee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bill Per EE - Cost Per EE</inlineHelpText>
    <label>Profit Per EE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>