force-app/main/default/objects/Proposal__c/fields/Proposal_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Client_Name__c</fullName>
    <formula>IF(
 ISBLANK( Opportunity__r.Account.DBA__c ),  Opportunity__r.Account.Name , Opportunity__r.Account.Name&amp; BR() &amp; &quot;dba &quot;&amp; Opportunity__r.Account.DBA__c)</formula>
    <label>Proposal Client Name</label>
    <type>Text</type>
</CustomField>