force-app/main/default/objects/Proposal__c/fields/Proposal_Delivery_Fee__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Delivery_Fee__c</fullName>
    <formula>IF(
ISPICKVAL( Delivery_Fee_Per_Location__c, &quot;Cost&quot;), &quot;Cost&quot;, 
IF(
ISPICKVAL( Delivery_Fee_Per_Location__c, &quot;Amount&quot;),&quot;$&quot;&amp; text(Delivery_Fee__c ), null))</formula>
    <label>Proposal Delivery Fee</label>
    <type>Text</type>
</CustomField>