force-app/main/default/objects/Proposal__c/fields/Proposal_EPLI_50_000_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Proposal_EPLI_50_000_Deductible__c</fullName>
    <formula>IF(  EPLI_50_000_Deductible_Waived__c  = true, &quot;Waived&quot;,
IF( NOT(ISBLANK(EPLI_50_000_Deductible__c)),  &quot;$&quot;&amp;TEXT(  EPLI_50_000_Deductible__c  ), NULL))</formula>
    <label>Proposal EPLI $50,000 Deductible</label>
    <type>Text</type>
</CustomField>